# SL-COMP18

./: CONTACT.md  NEWS.md  README.md
bench/: README.md  do-summary.sh
bench/bsl_sat/: dispose-iter-2.cvc4.smt2  test-dispose-1.cvc4.smt2  test-dispose-iter-1.cvc4.smt2
bench/qf_bsl_sat/: dispose-1.cvc4.smt2  dispose-2.cvc4.smt2  dispose-3.cvc4.smt2  dispose-4.cvc4.smt2  dispose-8.cvc4.smt2  dispose-iter-4.cvc4.smt2  dispose-iter-8.cvc4.smt2  rev-1-0.cvc4.smt2  rev-2-0.cvc4.smt2  rev-3-0.cvc4.smt2  rev-4-0.cvc4.smt2  rev-8-0.cvc4.smt2  rev-iter-1-0.cvc4.smt2  rev-iter-2-0.cvc4.smt2  rev-iter-3-0.cvc4.smt2  rev-iter-4-0.cvc4.smt2  rev-iter-8-0.cvc4.smt2  test-dispose-2.cvc4.smt2  test-dispose-3.cvc4.smt2  test-dispose-4.cvc4.smt2  test-dispose-8.cvc4.smt2  test-dispose-iter-2.cvc4.smt2  test-dispose-iter-3.cvc4.smt2  test-dispose-iter-4.cvc4.smt2  test-dispose-iter-8.cvc4.smt2  test-rev-1-0.cvc4.smt2  test-rev-2-0.cvc4.smt2  test-rev-3-0.cvc4.smt2  test-rev-4-0.cvc4.smt2  test-rev-8-0.cvc4.smt2  test-rev-iter-1-0.cvc4.smt2  test-rev-iter-2-0.cvc4.smt2  test-rev-iter-3-0.cvc4.smt2  test-rev-iter-4-0.cvc4.smt2  test-rev-iter-8-0.cvc4.smt2  tree-1.cvc4.smt2  tree-2.cvc4.smt2  tree-3.cvc4.smt2  tree-4.cvc4.smt2  tree-8.cvc4.smt2  (+5 more)
bench/qf_bsllia_sat/: chain-sat-1.cvc4.smt2  chain-sat-2.cvc4.smt2  chain-sat-3.cvc4.smt2  chain-sat-4.cvc4.smt2  chain-sat-8.cvc4.smt2  lseg-1.cvc4.smt2  lseg-2.cvc4.smt2  lseg-3.cvc4.smt2  lseg-4.cvc4.smt2  lseg-8.cvc4.smt2  (+10 more)
doc/: README.md  results.xlsx
input/: README.md
solvers/: README.md
starexec/: README.md
tools/: README.md
tools/smtlib2Xparser-sl/: CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp
tools/smtlib2Xparser-sl/exec/: execution.cpp  execution.h  execution_settings.cpp  execution_settings.h
tools/smtlib2Xparser-sl/input/Logics/: ALIA.smt2  AUFLIA.smt2  AUFLIRA.smt2  AUFNIRA.smt2  LIA.smt2  LRA.smt2  NIA.smt2  NRA.smt2  QF_ABV.smt2  QF_AUFBV.smt2  QF_AUFLIA.smt2  QF_AX.smt2  QF_BV.smt2  QF_IDL.smt2  QF_LIA.smt2  QF_LRA.smt2  QF_NIA.smt2  QF_NRA.smt2  QF_RDL.smt2  QF_SHID.smt2  QF_SHIDLIA.smt2  QF_SHLID.smt2  QF_SHLS.smt2  QF_UF.smt2  QF_UFBV.smt2  QF_UFIDL.smt2  QF_UFLIA.smt2  QF_UFLRA.smt2  QF_UFNIA.smt2  QF_UFNRA.smt2  SEPLOG.smt2  SHID.smt2  SHIDLIA.smt2  UF.smt2  UFIDL.smt2  UFLIA.smt2  UFLRA.smt2
tools/smtlib2Xparser-sl/input/Scripts/: 01.tst.smt2.sl2  err-emp.sl2  err-nil.sl2  err-pto.sl2
tools/smtlib2Xparser-sl/input/Theories/: ArraysEx.smt2  FixedSizeBitVectors.smt2  FloatingPoint.smt2  Reals.smt2  Reals_Ints.smt2  SepLogicTyped.smt2
tools/smtlib2Xparser-sl/smtlib/ast/: ast_abstract.h  ast_attribute.cpp  ast_attribute.h  ast_basic.cpp  ast_basic.h  ast_classes.h  ast_command.cpp  ast_command.h  ast_datatype.cpp  ast_datatype.h  ast_fun.cpp  ast_fun.h  ast_identifier.cpp  ast_identifier.h  ast_interfaces.h  ast_literal.cpp  ast_literal.h  ast_logic.cpp  ast_logic.h  ast_match.cpp  ast_match.h  ast_s_expr.cpp  ast_s_expr.h  ast_script.cpp  ast_script.h  ast_sort.cpp  ast_sort.h  ast_symbol_decl.cpp  ast_symbol_decl.h  ast_term.cpp  ast_term.h  ast_theory.cpp  ast_theory.h  ast_variable.cpp  ast_variable.h
tools/smtlib2Xparser-sl/smtlib/ast/stack/: ast_symbol_stack.cpp  ast_symbol_stack.h  ast_symbol_table.cpp  ast_symbol_table.h  ast_symbol_util.cpp  ast_symbol_util.h
tools/smtlib2Xparser-sl/smtlib/ast/visitor/: ast_sortedness_checker.cpp  ast_sortedness_checker.h  ast_syntax_checker.cpp  ast_syntax_checker.h  ast_term_sorter.cpp  ast_term_sorter.h  ast_visitor.cpp  ast_visitor.h  ast_visitor_extra.h
tools/smtlib2Xparser-sl/smtlib/parser/: Makefile  smtlib-bison-parser.y  smtlib-bison-parser.y.c  smtlib-bison-parser.y.h  smtlib-flex-lexer.l  smtlib-flex-lexer.l.c  smtlib-glue.cpp  smtlib-glue.h  smtlib_parser.cpp  smtlib_parser.h
tools/smtlib2Xparser-sl/smtlib/sep/: sep_abstract.h  sep_attribute.cpp  sep_attribute.h  sep_basic.cpp  sep_basic.h  sep_classes.h  sep_command.cpp  sep_command.h  sep_datatype.cpp  sep_datatype.h  sep_fun.cpp  sep_fun.h  sep_identifier.cpp  sep_identifier.h  sep_interfaces.h  sep_literal.cpp  sep_literal.h  sep_logic.cpp  sep_logic.h  sep_match.cpp  sep_match.h  sep_s_expr.cpp  sep_s_expr.h  sep_script.cpp  sep_script.h  sep_sort.cpp  sep_sort.h  sep_symbol_decl.cpp  sep_symbol_decl.h  sep_term.cpp  sep_term.h  sep_theory.cpp  sep_theory.h  sep_variable.cpp  sep_variable.h
tools/smtlib2Xparser-sl/smtlib/sep/stack/: sep_symbol_stack.cpp  sep_symbol_stack.h  sep_symbol_table.cpp  sep_symbol_table.h  sep_symbol_util.cpp  sep_symbol_util.h
tools/smtlib2Xparser-sl/smtlib/sep/transl/: sep_translator.cpp  sep_translator.h
tools/smtlib2Xparser-sl/smtlib/sep/visitor/: sep_heap_checker.cpp  sep_heap_checker.h  sep_pp_slcomp14.cpp  sep_pp_slcomp14.h  sep_term_sorter.cpp  sep_term_sorter.h  sep_visitor.cpp  sep_visitor.h  sep_visitor_extra.h  sep_visitor_stack.cpp  sep_visitor_stack.h  sep_visitor_stack_extra.h
tools/smtlib2Xparser-sl/util/: configuration.cpp  configuration.h  error_messages.cpp  error_messages.h  global_typedef.h  global_values.cpp  global_values.h  logger.cpp  logger.h
(+1083 files in other folders)
